create a initial route for get all
